# cotila

./: .gitignore  .travis.yml  AUTHORS  CHANGES  CMakeLists.txt  Doxyfile  LICENSE  README.md  _formulas.tex  annotated.html  apply_operations.h  classes.html  cotila_8h_source.html  dir_000001_000002.html  dir_000001_000003.html  dir_000001_000004.html  dir_000001_000005.html  dir_000002_000003.html  dir_000002_000004.html  dir_000003_000004.html  dir_000003_000005.html  dir_000004_000003.html  dir_000005_000004.html  dir_1c93764e70351daf65282226b6a0eb80.html  dir_1d2446071c685fd93cccb8499078896c.html  dir_3d984c20a2a19061a0c0f8e8536720a6.html  dir_3d984c20a2a19061a0c0f8e8536720a6_dep.map  dir_3d984c20a2a19061a0c0f8e8536720a6_dep.md5  dir_827d451cc908748887d6c934b3e5d956.html  dir_827d451cc908748887d6c934b3e5d956_dep.map  dir_827d451cc908748887d6c934b3e5d956_dep.md5  dir_b879cb0e1b4c733a92b4ccd81ae9a90f.html  dir_b879cb0e1b4c733a92b4ccd81ae9a90f_dep.map  dir_b879cb0e1b4c733a92b4ccd81ae9a90f_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23_dep.map  dir_d44c64559bbebec7f509842c48db8b23_dep.md5  files.html  functions.html  functions_func.html  (+188 more)
.github/workflows/: deploy-docs.yml  test.yml
include/cotila/: apply_operations.h  cotila.h  level1.h  scalar.h  tmp.h  vector.h
include/cotila/detail/: assert.h  tmp.h  type_traits.h
include/cotila/doxygen/: groups.h
include/cotila/matrix/: math.h  (+3 more)
search/: all_0.js  all_1.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  files_0.js  functions_0.js  functions_1.js  functions_11.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_b.js  functions_d.js  functions_e.js  functions_f.js  groups_0.js  groups_1.js  pages_0.js  searchdata.js  variables_0.js  (+3 more)
test/: CMakeLists.txt  level1_test.h  makefile  matrix_test.h  scalar_test.h  test.cpp  vector_test.h
(+5 files in other folders)
